# eyazis-lab-2

./: Makefile  animals_corpus.json  main.py  pyproject.toml
src/api/: v0.py
src/core/: find_context.py
src/data/: story_0.txt  story_1.txt  story_10.txt  story_11.txt  story_12.txt  story_13.txt  story_14.txt  story_15.txt  story_16.txt  story_17.txt  story_18.txt  story_19.txt  story_2.txt  story_20.txt  story_21.txt  story_22.txt  story_23.txt  story_24.txt  story_25.txt  story_26.txt  story_27.txt  story_28.txt  story_29.txt  story_3.txt  story_30.txt  story_31.txt  story_32.txt  story_33.txt  story_34.txt  story_35.txt  story_36.txt  story_37.txt  story_38.txt  story_39.txt  story_4.txt  story_40.txt  story_41.txt  story_42.txt  story_43.txt  story_44.txt  (+60 more)
src/parsed_data/: story_0.xml  story_1.xml  story_10.xml  story_11.xml  story_12.xml  story_13.xml  story_14.xml  story_15.xml  story_16.xml  story_17.xml  story_18.xml  story_19.xml  story_2.xml  story_20.xml  story_21.xml  story_22.xml  story_23.xml  story_24.xml  story_25.xml  story_26.xml  story_27.xml  story_28.xml  story_29.xml  story_3.xml  story_30.xml  story_31.xml  story_32.xml  story_33.xml  story_34.xml  story_35.xml  story_36.xml  story_37.xml  story_38.xml  story_39.xml  story_4.xml  story_40.xml  story_41.xml  story_42.xml  story_43.xml  story_44.xml  (+60 more)
src/scripts/: covert_to_xml.py  generate_corpus.py  json_corpus.py
ui/: package.json
ui/src/: App.tsx
ui/src/api/: getContext.ts  getWords.ts  index.ts
ui/src/components/Input/: Input.tsx
ui/src/components/Table/: Table.tsx
